--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header', { title: "Home" }) %>
     <h1>Landing Page</h1>
-    <h2>Welcome, (Username goes here)</h2>
+    <h2>Welcome, <%= nameofuser.username %></h2>
     <p>This is your personal dashboard where you can view exclusive content.</p>
       <h3>Your Recent Activity</h3>
       <ul>
